--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -183,7 +183,7 @@ BACK_BUTTON : "💗 ʙᴀᴄᴋ 💗"
 MONEY_BUTTON : "💸 ꜰʀᴇᴇ ᴍᴏɴᴇʏ 💸"
 
 S_B_1 : "Aᴅᴅ ᴍᴇ"
-S_B_2 : "Dᴩᴢ Sᴛᴏʀᴇ"
+S_B_2 : "Dᴏ Lᴀꜰᴢ 🌿"
 S_B_3 : "ᴀᴡᴡ ʙᴀʙʏ ᴀᴅᴅ ᴍᴇ"
 S_B_4 : "Hᴇʟᴘ & Cᴏᴍᴍᴀɴᴅs"
 S_B_5 : "ᴅᴇᴠᴇʟᴏᴩᴇʀ"
