--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -190,7 +190,7 @@ S_B_5 : "ᴅᴇᴠᴇʟᴏᴩᴇʀ"
 S_B_6 : "Dᴏ Lᴀꜰᴢ 🌿"
 S_B_7 : "ᴄʜᴀᴛᴛɪɴɢ"
 S_B_8 : "👀 ʏᴏᴜᴛᴜʙᴇ 👀"
-S_B_9 : "ᴄʜᴀᴛᴛɪɴɢ"
+S_B_9 : "Hᴀᴄᴋɪɴɢ ᴢᴏɴᴇ"
 S_B_10 : "💸ꜰʀᴇᴇ ᴍᴏɴᴇʏ💸"
 
 H_B_1 : "Aᴅᴍɪɴ"
