--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -135,7 +135,7 @@ cplay_5 : "ᴏɴʟʏ ᴄʜᴀɴɴᴇʟs ᴀʀᴇ sᴜᴘᴘᴏʀᴛᴇᴅ."
 cplay_6 : "» ʏᴏᴜ ɴᴇᴇᴅ ᴛᴏ ʙᴇ ᴛʜᴇ <b>ᴏᴡɴᴇʀ</b> ᴏғ ᴛʜᴇ ᴄʜᴀɴɴᴇʟ {0} ᴛᴏ ᴄᴏɴɴᴇᴄᴛ ɪᴛ ᴡɪᴛʜ ᴛʜɪs ɢʀᴏᴜᴘ.\n<b>ᴄʜᴀɴɴᴇʟ's ᴏᴡɴᴇʀ :</b> @{1}\n\nᴀʟᴛᴇʀɴᴀᴛɪᴠᴇʟʏ ʏᴏᴜ ᴄᴀɴ ʟɪɴᴋ ʏᴏᴜʀ ɢʀᴏᴜᴘ ᴛᴏ ᴛʜᴀᴛ ᴄʜᴀɴɴᴇʟ ᴀɴᴅ ᴛʜᴇɴ ᴛʀʏ ᴄᴏɴɴɴᴇᴄᴛɪɴɢ ᴡɪᴛʜ <code>/channelplay linked</code>"
 cplay_7 : "» ᴄʜᴀɴɴᴇʟ ᴘʟᴀʏ ᴅɪsᴀʙʟᴇᴅ."
 
-play_1 : "❤️‍🔥"
+play_1 : "💘"
 play_2 : "<b>➻ ᴄʜᴀɴɴᴇʟ ᴘʟᴀʏ ᴍᴏᴅᴇ</b>\n\nᴘʀᴏᴄᴇssɪɴɢ, ᴘʟᴇᴀsᴇ ᴡᴀɪᴛ...\n\n<b>ʟɪɴᴋᴇᴅ ᴄʜᴀɴɴᴇʟ :</b> {0}"
 play_3 : "» ғᴀɪʟᴇᴅ ᴛᴏ ᴘʀᴏᴄᴇss ǫᴜᴇʀʏ."
 play_4 : "<b>ᴀᴅᴍɪɴs ᴏɴʟʏ ᴘʟᴀʏ</b>\nᴏɴʟʏ ᴀᴅᴍɪɴs ᴏғ ᴛʜɪs ᴄʜᴀᴛ ᴀʀᴇ ᴀʟʟᴏᴡᴇᴅ ᴛᴏ ᴘʟᴀʏ\n\nᴄʜᴀɴɢᴇ ᴘʟᴀʏ ᴍᴏᴅᴇ ᴠɪᴀ /playmode"
@@ -183,12 +183,12 @@ BACK_BUTTON : "💗 ʙᴀᴄᴋ 💗"
 MONEY_BUTTON : "💸 ꜰʀᴇᴇ ᴍᴏɴᴇʏ 💸"
 
 S_B_1 : "Aᴅᴅ ᴍᴇ"
-S_B_2 : "Dᴏ Lᴀꜰᴢ 🌿"
+S_B_2 : "Dpz 🌿"
 S_B_3 : "ᴀᴡᴡ ʙᴀʙʏ ᴀᴅᴅ ᴍᴇ"
 S_B_4 : "Hᴇʟᴘ & Cᴏᴍᴍᴀɴᴅs"
-S_B_5 : "ᴅᴇᴠᴇʟᴏᴩᴇʀ"
-S_B_6 : "Dᴏ Lᴀꜰᴢ 🌿"
-S_B_7 : "Hᴀᴄᴋɪɴɢ ᴢᴏɴᴇ"
+S_B_5 : "Dᴇᴠᴇʟᴏᴩᴇʀ"
+S_B_6 : "Dpz 🌿"
+S_B_7 : "Chatting"
 S_B_8 : "👀 ʏᴏᴜᴛᴜʙᴇ 👀"
 S_B_9 : "Hᴀᴄᴋɪɴɢ ᴢᴏɴᴇ"
 S_B_10 : "💸ꜰʀᴇᴇ ᴍᴏɴᴇʏ💸"
